<resources>
    <string name="app_name">BAUET</string>
    <string name="Welcome_Title">Welcome</string>
    <string name="Welcome_Login_Title">Welcome Back Login in to Your Account</string>
    <string name="welcome_user_name">Fardin</string>
    <string name="batch_title">Batch:</string>
    <string name="batch_name">__</string>
    <string name="class_schedule_title">Class Card</string>

    <string name="class_going">Next Class / Ongoing Class</string>

    <string name="all_class_title">Todays All Class Schedule</string>

    <string name="user_name">Fardin Ahosan</string>

    <string name="class_schedule_title_2">Class Schedule</string>

    <string name="today_is_title">Today :</string>
    <string name="today_is">Monday</string>
    <string name="class_time">08:15</string>
    <string name="am_or_pm">AM</string>
    <string name="class_is">Math:2247</string>
    <string name="teacher_name">Md. Akher Chowdhury</string>


    <string name="weather_show">_____</string>
    <string name="weather_extension">°C,</string>
    <string name="weather_location">____</string>


    <string name="WEDNESDAY_FIRST_CLASS">10:06</string>
    <string name="WEDNESDAY_SECOND_CLASS">9:16</string>
    <string name="WEDNESDAY_THIRD_CLASS">10:42</string>

    <string name="chat_time">00.00 AM</string>


    <string name="MCLASS_TIME">00.00</string>
    <string name="MCLASS_AM_PM">AM</string>
    <string name="MCLASS_TEACHER">Md. Akher Chowdhury</string>
    <string name="MCLASS_CLASS">Math:2247</string>

    <string name="sample_message">Hey !!</string>
    <string name="author">Fardin Ahosan</string>


    <string name="EMAIL">Email</string>
    <string name="PASSWORD">Password</string>
    <string name="LOGIN">Login</string>
    <string name="Register">Register</string>
    <string name="signup">Dont have an account ?signup from here</string>
    <string name="regDone">Already Have an Account? Login From Here</string>
    <string name="registerTitle">Register Your Account</string>


    <string name="User_Name">User Name</string>


    <string name="bChat">bChat</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>


    <string name="prompt_msg">Write Anything</string>
    <string name="r_exam">Running Exam</string>
    <string name="quotes">“Never do tomorrow what you can do today. Procrastination is the thief of time.” – Charles Dickens ‘David Copperfield’</string>


    <string name="test_title">Class Test</string>
    <string name="Hello">Hello</string>
    <string name="pdf_name">19104013_math.pdf</string>

    <string name="Exam_Name">Math:2247</string>
    <string name="Exam_Start">11:40 AM</string>
    <string name="Exam_End">12:35 PM</string>

    <string name="id_field">______</string>

    <string name="chat_active_name">__________</string>
    <string name="online_books">Online Library</string>
    <string name="LAST_READ">Last Read</string>
    <string name="LAST_READ_BOOK_NAME">Core Java By Cay S </string>
    <string name="book_01_info">Core Java By Cay S </string>
    <string name="book_01_info_b">Core Java by Cay S. Horstmann and Gary Cornell was originally published in the Java series of Sun Microsystems Press and is now published by Prentice-Hall </string>
    <string name="book_01_edition">10TH EDITION </string>
    <string name="WTTHL">Welcome to The BAUET Online Library </string>
    <string name="Top_book">Featured :</string>
    <string name="all_books">All Books :</string>


    <string name="test_name">Math-2247</string>
    <string name="ID">ID</string>
    <string name="developer">Developer</string>
    <string name="about_developer">About Developers</string>
    <string name="YS">Year and Semester</string>
    <string name="ys_hints">1st Year 1st Semester</string>
    <string name="ys_data">1st Year 1st Semester</string>
    <string name="Department">Department</string>
    <string name="Batch">Batch</string>
    <string name="upload">UPLOAD</string>
    <string name="enter_exam">Enter Test Zone</string>
    <string name="today_exam_title">Todays Class Test</string>
    <string name="select_pdf">Select Pdf From Storage</string>


    <string name="books_text_01">Programming</string>
    <string name="books_text_02">Physics</string>
    <string name="books_text_03">Math</string>
    <string name="read">Read Now</string>
    <string name="notice_title">Notice</string>
    <string name="notice_notice">Unread Notice</string>

    <string name="we">We</string>
    <string name="are">Are</string>













    <string name="Fardin_name">Fardin Ahosan</string>
    <string name="Fardin_department">Computer Science and Engineering </string>
    <string name="Fardin_id">19104013</string>
    <string name="Fardin_batch">Ninth Batch</string>

    <string name="Asif_name">Asif Ishtiaque</string>
    <string name="Asif_department">Computer Science and Engineering </string>
    <string name="Asif_id">19104008</string>
    <string name="Asif_batch">Ninth Batch</string>

    <string name="projext_sign">“After 27 days of hard work, we developed this application project. It was a puzzling challenge for us to implement this many features nonetheless we made it fully functional”</string>







</resources>