<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/semi_white"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/Logo_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_logo_bg"
        android:elevation="5dp"
        android:fontFamily="@font/product_sans"
        android:text="@string/app_name"
        android:textColor="@color/semi_black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/transparent"
        android:scaleX=".5"
        android:scaleY=".5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Logo_app"
        app:srcCompat="@drawable/ic_appsettings" />

    <TextView
        android:id="@+id/Welcome_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/product_sans"
        android:text="@string/Welcome_Title"
        android:textColor="@color/semi_black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo_app" />

    <TextView
        android:id="@+id/Welcome_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/product_sans"
        android:text="@string/welcome_user_name"
        android:textColor="@color/semi_black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/Welcome_user"
        app:layout_constraintStart_toEndOf="@+id/Welcome_user" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="36dp"
        android:layout_height="41dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/Welcome_user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_user" />

    <TextView
        android:id="@+id/batch_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/product_sans"
        android:text="@string/batch_title"
        android:textColor="@color/semi_black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcome_user" />

    <TextView
        android:id="@+id/batch_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:fontFamily="@font/product_sans"
        android:text="@string/batch_name"
        android:textColor="@color/semi_black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/batch_title"
        app:layout_constraintStart_toEndOf="@+id/batch_title" />

    <!--Category Started-->




    <!--Class Scedule Block Start-->

    <ImageButton
        android:id="@+id/class_scedule_button"
        android:layout_width="191dp"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/batch_name"
        app:srcCompat="@drawable/ic_class_alram" />

    <ImageView
        android:id="@+id/clock_image"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintStart_toStartOf="@+id/class_scedule_button"
        app:layout_constraintTop_toTopOf="@+id/class_scedule_button"
        app:srcCompat="@drawable/ic_clock" />

    <TextView
        android:id="@+id/class_scedule_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/product_sans"
        android:text="@string/class_schedule_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/clock_image"
        app:layout_constraintTop_toTopOf="@+id/class_scedule_button" />

    <TextView
        android:id="@+id/Today_is_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/product_sans"
        android:text="@string/today_is_title"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/clock_image"
        app:layout_constraintTop_toTopOf="@+id/class_scedule_button" />

    <TextView
        android:id="@+id/Today_is"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:fontFamily="@font/product_sans"
        android:text="@string/today_is"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/Today_is_title"
        app:layout_constraintStart_toEndOf="@+id/Today_is_title" />

    <TextView
        android:id="@+id/class_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/product_sans"
        android:text="@string/class_time"
        android:textColor="@color/white"
        android:textSize="85sp"
        app:layout_constraintStart_toStartOf="@+id/class_scedule_button"
        app:layout_constraintTop_toBottomOf="@+id/clock_image" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/product_sans"
        android:text="@string/am_or_pm"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/class_time"
        app:layout_constraintTop_toTopOf="@+id/class_time" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/product_sans"
        android:text="@string/class_is"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/class_scedule_button"
        app:layout_constraintTop_toBottomOf="@+id/class_time" />


    <!--Class Scedule Block End-->


</androidx.constraintlayout.widget.ConstraintLayout>