<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/singleMessageContainer"
    android:orientation="vertical">

        <TextView
            android:fontFamily="@font/product_sans"
            android:id="@+id/chat_time"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="start"
            android:textColor="@color/semi_black"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/chat_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:fontFamily="@font/product_sans"
            android:id="@+id/author"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="start"
            android:textColor="@color/semi_black"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:fontFamily="@font/product_sans"
            android:id="@+id/message"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:padding="10dp"
            android:textSize="15sp"
            android:text="@string/sample_message"
            android:textColor="@android:color/primary_text_light"
            />



</LinearLayout>